--- a/P005479.opf/layers/v001/Pagination.yml
+++ b/P005479.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 78c8e5aacbd94cb49f4b871390e6ff9c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bbe5ec229e7b4cb495d09640285e8994:
