--- a/P005479.opf/meta.yml
+++ b/P005479.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P005479
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:52:44.212927
 source_metadata:
   id: bdr:W1KG24934
   title: གངས་རིན་པོ་ཆེའི་གཏེར་མཛོད།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 536
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
